App1/Yaml/svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: app1
    name: app1
    namespace: default
spec:
  ports:
   - port: 3000
     targetPort: 3000
  selector:
    app: app1
  sessionAffinity: None
  type: ClusterIP
