App1/Yaml/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - name: app1
    match:
    - uri:
        prefix: /add
    route:
    - destination:
        host: app1.default.svc.cluster.local
        port:
          number: 3000
